# UnityAdm-practice

./: .gitignore  .gitmodules
Unity/: .gitignore
Unity/Assets/: AudioBlockTransport.cs  AudioTest.cs  Main.cs  Main.unity  Test.cs  UnityAdm.cs
Unity/Assets/Tests/: BinauralBlockTest.cs  HoaBlockTest.cs  ObjectBlockTest.cs  SpeakerBlockTest.cs  Test.asmdef
Unity/Assets/plugins/: AudioBlockHoa.cs  AudioBlockInterface.cs  AudioBlockObject.cs  AudioBlockObjects.cs  AudioBlockWrapper.cs  BlockTypes.cs  Main.asmdef  RandomNumberWrapper.cs
Unity/Assets/prefabs/: Audio Source.prefab  Object.prefab  Position.prefab  Sphere.prefab
Unity/ProjectSettings/: AudioManager.asset  ProjectSettings.asset
src/: AdmReader.cpp  AdmReader.h  AudioBlockBinaural.cpp  AudioBlockBinaural.h  AudioBlockDirectSpeakers.cpp  AudioBlockDirectSpeakers.h  AudioBlockHoa.cpp  AudioBlockHoa.h  AudioBlockObjects.cpp  AudioBlockObjects.h  CMakeLists.txt  Interface.cpp  Interface.h  main.cpp  main.h
